--- a/index.html
+++ b/index.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://kit.fontawesome.com/2938e5ed1a.js" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
-    <div class="container">
-        <h1></h1>
+
+    <div class="login-container">
+        <h1>Sign in</h1>
+        <form action="GET">
+            <h5 id="name">Email(phone or mobile accounts)</h5>
+
+            <input class="user-name" type="text" name="user-name" id="userName" placeholder="Enter Email">
+
+            <h3>password</h3>
+
+            <span>
+                <a class="forgot-password" href="">Forgot Password</a>
+            </span>
+            <input class="password" type="password" placeholder="Enter Password">
+            <span>
+                <button id="sumbit-bttn" type="submit">Continue</button>
+
+                <a class="help" href="https://www.amazon.com/gp/help/customer/display.html"><i class="fa-solid fa-caret-right"></i>Need Help?</a>
+<br>
+<hr >
+<br>
+            </span>
+        </form>
+<h3>New to Amazon</h3>
+
+<button class="create-account-btn" type="submit">Create Your Amazon Account</button>
+
+    </div>
+
+
+
+    </div>
+    <footer>
+        <hr>
+        <div class="footer-nav">
+            <h4><a href="https://www.amazon.com/gp/help/customer/display.html%3FnodeId%3DGLSBYFE9MGKKQXXM">Conditions of use</a></h4>
+            <h4><a href="https://www.amazon.com/gp/help/customer/display.html%3FnodeId%3DGX7NJQ4ZB8MHFRNJ">Private policy</a></h4>
+            <h4><a href="https://www.amazon.com/gp/help/customer/display.html">Help</a></h4
+        </div>
+    </footer>
+    <div id="copy-right">
+        <h4>
+            &copy1996-2022 Amazon.com inc. or it's affiliates 
+        </h4>
+
     </div>
 </body>
+
 </html>
